test for 2nd bcg, need to be fixed at the bottom

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Nuworkplay
 ---
 <section>
-	<div class="bcg-parallax">
+	<div class="bcg-parallax fs">
 		<div class="bcg1">
 			<div class="content headline">
 				<img src="../images/logoNWPv1.png" class="logo">
@@ -24,7 +24,7 @@ title: Nuworkplay
 </section>
 
 <section>
-	<div class="bcg-parallax">
+	<div class="bcg-parallax fs">
 		<div class="bcg2">
 			<div class="content description">
 				<h1>Living, Working, Playing</h1>
