Added living, working, playing icons

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,8 +34,9 @@ title: Nuworkplay
 						</header>
 						<section>
 								<p class="slideInUp slideInUp2">Description + pics</p>
+								<%= partial "icons" %>
 						</section>
-				</div> <!-- .wrapper -->
+				</div>
 		</article>
 
 
