--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -5,7 +5,7 @@
 @import "base/base"
 @import "neat/neat"
 
-@import "parallaxsm"
 @import "content"
 @import "cta"
 @import "modalForm"
+@import "icons"
