Add autoprefixer gem

--- a/source/_modal.erb
+++ b/source/_modal.erb
@@ -1,6 +1,6 @@
 <div class="modal">
   <label for="modal-1">
-    <div class="modal-trigger">Get in Touch</div>
+    <div class="modal-trigger">Ask for quotation</div>
   </label>
   <input class="modal-state" id="modal-1" type="checkbox" />
   <div class="modal-fade-screen">
