--- a/source/stylesheets/_content.scss
+++ b/source/stylesheets/_content.scss
@@ -52,9 +52,11 @@ $tablet: new-breakpoint(max-width 768px 4);
 
 /* =Content Block */
 .content-block {
-  background-color: #212121;
-  color: rgba(255, 255, 255, 0.9);}
-
+  background-color: $white;
+  color: $dark-gray;
+  overflow: scroll;
+  padding: 20px 0 20px 0;
+}
 /* =Slide */
 .slide {
   position: relative;
