--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,21 +21,15 @@ title: Nuworkplay
 								<h1>Perfect culture and business match for your 2017 team's labs, design sprints, hackathons or bootcamps</h1>
 								<p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p>
 						</header>
-						<section>
-						</section>
 				</div> <!-- .wrapper -->
 		</article>
 
 		<article id="slide01" class="slide fs">
 				<div class="bcg"></div>
-				<div class="wrapper">
-						<header>
-								<h1>Living, Working, Playing</h1>
-						</header>
-						<section>
-								<p>Description + pics</p>
-								<%= partial "icons" %>
-						</section>
+				<div class="wrapper features grid-center">
+					<p>SEND YOUR TEAM GO SURFING, BBQ, PLAY A GAME OR WORKOUT</p>
+					<h1>BUT GET THE BUSINESS PURPOSE DONE</h1>
+					<%= partial "icons" %>
 				</div>
 		</article>
 
