closing this branch to restart design

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,19 +1,37 @@
 ---
 title: Nuworkplay
 ---
-<div id="intro" class="header-container fs">
-		<div class="bcg"></div>
-		<header class="wrapper grid-center">
-				<img src="../images/logoNWPv1.png" class="logo">
-				<h1 class="title">Inspiring Company retreats</h1>
-				<p>Bring new soul to your team, unleash efficient work & play experience in genuine Portugal</p>
-		</header>
+<div class="hero-header">
+	<div class="hero-bcg"></div>
+	<div class="hero-headline grid-center">
+		<img src="../images/logoNWPv1.png" class="logo">
+		<h1 class="title">Inspiring Company retreats</h1>
+		<p>Bring new soul to your team, unleash efficient work & play experience in genuine Portugal</p>
+	</div>
 </div>
+
+
 <div class="cta-form">
 	<%= partial "modal" %>
 </div>
 
-<div class="main-container">
+<div id="cb01" class="content-pitch">
+				<div class="grid-center">
+						<h1>Perfect culture and business match for your 2017 team's labs, design sprints, hackathons or bootcamps</h1>
+						<p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p>
+				</div>
+</div>
+
+<div class="feat-header">
+	<div class="feat-bcg"></div>
+	<div class="feat-bullets grid-center">
+		<p>SEND YOUR TEAM GO SURFING, BBQ, PLAY A GAME OR WORKOUT</p>
+		<h1>BUT GET THE BUSINESS PURPOSE DONE</h1>
+		<%= partial "icons" %>
+	</div>
+</div>
+
+<!-- <div class="main-container">
 
 		<article id="cb01" class="content-block">
 				<div class="wrapper">
@@ -22,7 +40,7 @@ title: Nuworkplay
 								<p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p>
 						</header>
 				</div> <!-- .wrapper -->
-		</article>
+		<!-- </article>
 
 		<article id="slide01" class="slide fs">
 				<div class="bcg"></div>
@@ -38,6 +56,6 @@ title: Nuworkplay
 			<div class="wrapper grid-center">
 				<%= partial "getintouch" %>
 			</div> <!-- .wrapper -->
-		</article>
+		<!-- </article> -->
 
-</div>
+<!-- </div> -->
