--- a/source/stylesheets/_content.scss
+++ b/source/stylesheets/_content.scss
@@ -1,17 +1,17 @@
-
+//
 $mobile: new-breakpoint(max-width 480px 4);
 $tablet: new-breakpoint(max-width 768px 4);
-
-/* =Header */
-.header-container {
-  // text-align: center;
-  overflow: hidden;
-  position: relative; }
-  .header-container .wrapper {
-    z-index: 2;
-    position: relative;
-    }
-
+//
+// /* =Header */
+// .header-container {
+//   // text-align: center;
+//   overflow: hidden;
+//   position: relative; }
+//   .header-container .wrapper {
+//     z-index: 2;
+//     position: relative;
+//     }
+//
 .logo {
   width: 20vw;
   padding-top: 15vh;
@@ -30,51 +30,81 @@ $tablet: new-breakpoint(max-width 768px 4);
       }
 }
 
-.bcg {
-  background: no-repeat center center;
-  background-size: cover;
+
+.hero-bcg {
+   background: image-url('Aljezur.jpg') no-repeat center center;
+   background-size: cover;
+   height: 100vh;
+   overflow: scroll;
+   z-index: 5;
+}
+
+.hero-headline {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 1; }
-  .header-container .bcg {
-    background-image: image-url('Aljezur.jpg');
-    background-size: cover; }
-  #slide01 .bcg {
-    background: image-url('Lisboabridge.jpg') no-repeat center center;
-    background-size: cover; }
-
-.fs {
-  height: 100vh;
+  top: 0;
+  z-index: 10;
 }
 
-
-/* =Content Block */
-.content-block {
-  background-color: $white;
-  color: $dark-gray;
-  overflow: scroll;
-  padding: 20px 0 20px 0;
+.content-pitch {
+  position: absolute;
+  top: 100vh;
 }
-/* =Slide */
-.slide {
-  position: relative;
-  overflow: hidden;
-  overflow-x: hidden;
+
+.feat-bcg {
+   background: image-url('Lisboabridge.jpg') no-repeat center center;
+   background-size: cover;
+   height: 100vh;
+   overflow: scroll;
+   position: fixed;
+   top: 0;
+   z-index: 2;
 }
-  .slide .wrapper {
-    position: relative;
-    z-index: 2; }
-  .slide#slide01 .wrapper {
-    position: absolute;
-    top: 10%; }
-
-
-/* =Content block form */
-
-  #cb02 {
-    position: absolute;
-    width: 100vw;
-    padding: 20px 0 20px 0;
-  }
+//
+// .bcg {
+//   background: no-repeat center center;
+//   background-size: cover;
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 1;
+//   opacity: 1; }
+//   .header-container .bcg {
+//     background-image: image-url('Aljezur.jpg');
+//     background-size: cover; }
+//   #slide01 .bcg {
+//     background: image-url('Lisboabridge.jpg') no-repeat center center;
+//     background-size: cover; }
+//
+// .fs {
+//   height: 100vh;
+// }
+//
+//
+// /* =Content Block */
+// .content-block {
+//   background-color: $white;
+//   color: $dark-gray;
+//   overflow: scroll;
+//   padding: 20px 0 20px 0;
+// }
+// /* =Slide */
+// .slide {
+//   position: relative;
+//   overflow: hidden;
+//   overflow-x: hidden;
+// }
+//   .slide .wrapper {
+//     position: relative;
+//     z-index: 2; }
+//   .slide#slide01 .wrapper {
+//     position: absolute;
+//     top: 10%; }
+//
+//
+// /* =Content block form */
+//
+//   #cb02 {
+//     position: absolute;
+//     width: 100vw;
+//     padding: 20px 0 20px 0;
+//   }
