background and centered wrap

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,17 +1,23 @@
 ---
 title: Nuworkplay
 ---
-<div class="hero-header">
-	<div class="hero-bcg"></div>
-	<div class="hero-headline grid-center">
-		<img src="../images/logoNWPv1.png" class="logo">
-		<h1 class="title">Inspiring Company retreats</h1>
-		<p>Bring new soul to your team, unleash efficient work & play experience in genuine Portugal</p>
+<div class="backgrounds" id="slider">
+	<div class="hero-bcg desaturate"></div>
+</div>
+<div class="outer-wrap landing">
+	<div class="logo">
+		<%= image_tag 'LogoNWP.png' %>
+	</div>
+	<div class="inner-wrap">
+		<div class="wrap">
+			<h1 class="title">Inspiring company retreats</h1>
+			<p>Bring new soul to your team, unleash efficient work & play experience in genuine Portugal</p>
+		</div>
 	</div>
 </div>
 
 
-<div class="cta-form">
+<!-- <div class="cta-form">
 	<%= partial "modal" %>
 </div>
 
@@ -29,7 +35,7 @@ title: Nuworkplay
 		<h1>BUT GET THE BUSINESS PURPOSE DONE</h1>
 		<%= partial "icons" %>
 	</div>
-</div>
+</div> -->
 
 <!-- <div class="main-container">
 
