new background and cta button

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,11 +17,11 @@ title: Nuworkplay
 </div>
 
 
-<!-- <div class="cta-form">
+<div class="cta-form">
 	<%= partial "modal" %>
 </div>
 
-<div id="cb01" class="content-pitch">
+<!-- <div id="cb01" class="content-pitch">
 				<div class="grid-center">
 						<h1>Perfect culture and business match for your 2017 team's labs, design sprints, hackathons or bootcamps</h1>
 						<p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p>
@@ -35,7 +35,7 @@ title: Nuworkplay
 		<h1>BUT GET THE BUSINESS PURPOSE DONE</h1>
 		<%= partial "icons" %>
 	</div>
-</div> -->
+</div> --> -->
 
 <!-- <div class="main-container">
 
