--- a/source/stylesheets/_cta.sass
+++ b/source/stylesheets/_cta.sass
@@ -18,5 +18,5 @@
     border-radius: 2px
     background: transparent
     &:hover
-      color: $dark-gray
+      color: RGBA(129, 115, 151, 1.00)
       background: $white
