--- a/source/_modal.erb
+++ b/source/_modal.erb
@@ -1,7 +1,7 @@
 <div class="modal">
   <label for="modal-1">
     <div class="modal-trigger">
-        <h1>ASK FOR QUOTATION</h1>
+        <h1>QUOTATION</h1>
     </div>
   </label>
   <input class="modal-state" id="modal-1" type="checkbox" />
