--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@ title: Nuworkplay
 	</div>
 	<div class="inner-wrap">
 		<div class="wrap">
-			<h1 class="title">Inspiring company retreats</h1>
+			<h1 class="title">PULL OFF YOUR STARTUP RETREATS</h1>
 			<p>Bring new soul to your team, unleash efficient work & play experience in genuine Portugal</p>
 		</div>
 	</div>
