--- a/source/stylesheets/_content.scss
+++ b/source/stylesheets/_content.scss
@@ -66,10 +66,10 @@ $mobile: new-breakpoint(max-width 768px 4);
 	color: $white;
 	h1 {
 	color: RGBA(0, 0, 0, 1);
-	font-size: 40px;
+	// font-size: 40px;
 	}
 	p {
-	font-size: 12px;
+	// font-size: 12px;
 	}
 }
 
