--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -3,8 +3,8 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: 'Montserrat', sans-serif;
-$heading-font-family: 'Oswald', sans-serif;
+$base-font-family: 'Roboto Mono', monospace;
+$heading-font-family: 'Rubik', sans-serif;
 
 // Font Sizes
 $base-font-size: 1em;
