--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300|Rubik:900" rel="stylesheet">
 
   </head>
 
