--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,21 +21,19 @@ title: Nuworkplay
 	<%= partial "modal" %>
 </div>
 
-<!-- <div id="cb01" class="content-pitch">
-				<div class="grid-center">
-						<h1>Perfect culture and business match for your 2017 team's labs, design sprints, hackathons or bootcamps</h1>
-						<p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p>
-				</div>
+<div class="content-wrap">
+	<h1>Perfect culture and business match for your 2017 team's labs, design sprints, hackathons or bootcamps</h1>
+
 </div>
 
-<div class="feat-header">
+<!-- <div class="feat-header">
 	<div class="feat-bcg"></div>
 	<div class="feat-bullets grid-center">
 		<p>SEND YOUR TEAM GO SURFING, BBQ, PLAY A GAME OR WORKOUT</p>
 		<h1>BUT GET THE BUSINESS PURPOSE DONE</h1>
 		<%= partial "icons" %>
 	</div>
-</div> --> -->
+</div> -->
 
 <!-- <div class="main-container">
 
@@ -64,4 +62,5 @@ title: Nuworkplay
 			</div> <!-- .wrapper -->
 		<!-- </article> -->
 
-<!-- </div> -->
+<!-- </div> About NWP-->
+<!-- <p>Nuworkplay builds inspiring working spaces, experiences and outdoors activities few miles away from iconic Lisbon's beaches in Portugal</p> -->
